moved movie migration to seeds, updated movie controller, movie index view

--- a/hw3/app/views/movies/index.html.haml
+++ b/hw3/app/views/movies/index.html.haml
@@ -7,7 +7,7 @@
   Include: 
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, @selected_ratings.include?(rating)
+    = check_box_tag "ratings[#{rating}]", 1, @selected_ratings.include?(rating), :id => "ratings_#{rating}"
   = submit_tag 'Refresh', :id => 'ratings_submit'
 
 %table#movies
@@ -17,7 +17,7 @@
       %th Rating
       %th{:class => @date_header}= link_to 'Release Date', movies_path(:sort => 'release_date', :ratings => @selected_ratings), :id => 'release_date_header'
       %th More Info
-  %tbody#movielist
+  %tbody
     - @movies.each do |movie|
       %tr
         %td= movie.title 
