--- a/hw4_rottenpotatoes/app/views/movies/show.html.haml
+++ b/hw4_rottenpotatoes/app/views/movies/show.html.haml
@@ -3,12 +3,15 @@
 %h2 Details about #{@movie.title}
 
 %ul#details
-  %li
-    Rating:
-    = @movie.rating
-  %li
-    Released on:
-    = @movie.release_date.strftime("%B %d, %Y")
+	%li
+		Director:
+		= @movie.director
+	%li
+		Rating:
+		= @movie.rating
+	%li
+		Released on:
+		= @movie.release_date.strftime("%B %d, %Y")
 
 %h3 Description:
 
@@ -17,3 +20,4 @@
 = link_to 'Edit', edit_movie_path(@movie)
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
 = link_to 'Back to movie list', movies_path
+= link_to 'Find Movies With Same Director', by_director_path(@movie)
